--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -1,6 +1,5 @@
 .home-section {
-  padding-top: 8rem;
-  /* deja espacio por el navbar fijo */
+  padding-top: 10rem;
   padding-bottom: 6rem;
   text-align: center;
 }
@@ -8,25 +7,27 @@
 .home-wrapper {
   max-width: 1100px;
   margin: 0 auto;
-  padding: 0 1rem;
+  padding: 0 1.5rem;
 }
 
 
 .home-section h1 {
   font-family: var(--font-esoteric);
-  font-size: 2.5rem;
+  font-size: 3rem;
   justify-content: center;
-  margin-bottom: 1rem;
+  margin-bottom: 1.5rem;
   letter-spacing: 2px;
   text-transform: uppercase;
   color: var(--color-gold);
-  font-family: cinzel;
 }
 
 .home-section p {
-  font-size: 1.3rem;
-  margin-bottom: 4rem;
+  font-size: 1.4rem;
+  margin-bottom: 3.5rem;
   opacity: 0.9;
+  max-width: 700px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 /* ------------------------------
@@ -35,7 +36,7 @@
 .cards-grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(170px, 1fr));
-  gap: 3rem;
+  gap: 2.5rem;
   justify-content: center;
   justify-items: center;
 
@@ -76,9 +77,19 @@
 
 
 @media (max-width: 768px) {
+  .home-section {
+    padding-top: 8rem;
+  }
+
+  .home-section h1{ 
+    font-size: 2rem;
+  }
+
+  .home-section p{
+    font-size: 1.1rem;
+  }
   .cards-grid {
     grid-template-columns: repeat(2, 1fr);
-    /* ✅ Aquí hacemos dos por fila */
   }
 }
 
