--- a/src/styles.css
+++ b/src/styles.css
@@ -7,6 +7,7 @@
   --color-gold: #E6CFA8;
   --font-esoteric: 'Cinzel', serif;
   --font-legible: 'Cormorant Garamond', serif;
+  --navbar-height: 70px;
 }
 
 body {
